<resources>
    <string name="app_name">My Project</string>
    <string name="home">الرئسية</string>
    <string name="library">المكتبات</string>
    <string name="attribute">الصفات</string>
    <string name="Character">الصحابة</string>
    <string name="Audio">الصوتيات</string>


    <string name="book_ss">صفة الصفوة</string>
    <string name="book_des_ss">
        صفة الصفوة هو كتاب في السيرة النبوية والتراجم والطبقات، ألفه الحافظ أبو الفرج بن الجوزي (508 هـ - 597 هـ)
        ، يبحث الكتاب في التراجم وقصص الاعتبار والمواعظ التي حصلت مع الأتقياء والأصفياء من الصحابة ومن بعدهم.

        صفة الصفوة هو كتاب في السيرة النبوية والتراجم والطبقات، ألفه الحافظ أبو الفرج بن الجوزي (508 هـ - 597 هـ)
        ، يبحث الكتاب في التراجم وقصص الاعتبار والمواعظ التي حصلت مع الأتقياء والأصفياء من الصحابة ومن بعدهم.

        صفة الصفوة هو كتاب في السيرة النبوية والتراجم والطبقات، ألفه الحافظ أبو الفرج بن الجوزي (508 هـ - 597 هـ)
        ، يبحث الكتاب في التراجم وقصص الاعتبار والمواعظ التي حصلت مع الأتقياء والأصفياء من الصحابة ومن بعدهم.

        صفة الصفوة هو كتاب في السيرة النبوية والتراجم والطبقات، ألفه الحافظ أبو الفرج بن الجوزي (508 هـ - 597 هـ)
        ، يبحث الكتاب في التراجم وقصص الاعتبار والمواعظ التي حصلت مع الأتقياء والأصفياء من الصحابة ومن بعدهم.

          صفة الصفوة هو كتاب في السيرة النبوية والتراجم والطبقات، ألفه الحافظ أبو الفرج بن الجوزي (508 هـ - 597 هـ)
        ، يبحث الكتاب في التراجم وقصص الاعتبار والمواعظ التي حصلت مع الأتقياء والأصفياء من الصحابة ومن بعدهم.
          صفة الصفوة هو كتاب في السيرة النبوية والتراجم والطبقات، ألفه الحافظ أبو الفرج بن الجوزي (508 هـ - 597 هـ)
        ، يبحث الكتاب في التراجم وقصص الاعتبار والمواعظ التي حصلت مع الأتقياء والأصفياء من الصحابة ومن بعدهم.
          صفة الصفوة هو كتاب في السيرة النبوية والتراجم والطبقات، ألفه الحافظ أبو الفرج بن الجوزي (508 هـ - 597 هـ)
        ، يبحث الكتاب في التراجم وقصص الاعتبار والمواعظ التي حصلت مع الأتقياء والأصفياء من الصحابة ومن بعدهم.
          صفة الصفوة هو كتاب في السيرة النبوية والتراجم والطبقات، ألفه الحافظ أبو الفرج بن الجوزي (508 هـ - 597 هـ)
        ، يبحث الكتاب في التراجم وقصص الاعتبار والمواعظ التي حصلت مع الأتقياء والأصفياء من الصحابة ومن بعدهم.

    </string>


    <string name="book_man_around_massenger">رجال حول الرسول</string>
    <string name="book_des_man_around_massenger">كتاب رجال حول الرسول لخالد محمد خالد هو كتاب يتناول صور سريعة لحياة نفر من أصحاب النبي محمد من منظور إسلامي يتناول التغييرات والتحولات التي طرأت على هذه الشخصيات بدخولها الإسلام والسمة المميزة لكل منهم.\n</string>

    <string name="book_start_end">البداية والنهاية</string>
    <string name="book_des_start_end">هو عرض للتاريخ من بدء الخلق إلى نهايته يبدأ ببداية خلق السماوات والأرض[؟] والملائكة إلى خلق آدم، ثم يتطرق إلى قصص الأنبياء مختصرًا ثم التفصيل في الأحداث التاريخيّة منذ مبعث النبي محمد حتى سنة 768 هـ بطريقة التبويب على السنوات. وتبدأ السنة بقوله \"ثم دخلت سنة..\" ثم يسرد الأحداث التاريخيّة فيها ثم يذكر أبرز من توفوا في هذه السنة. أما جزء النهاية ففيه علامات الساعة لغاية يوم الحساب بالتفصيل.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_ss_url">https://www.noor-book.com/%D9%83%D8%AA%D8%A7%D8%A8-%D8%B5%D9%81%D9%87-%D8%A7%D9%84%D8%B5%D9%81%D9%88%D9%87-%D8%A7%D8%A8%D9%86-%D8%A7%D9%84%D8%AC%D9%88%D8%B2%D9%8A-pdf</string>
    <string name="for_dawnload">للتحميل اضغط هنا</string>
    <string name="charattribute">الصفات</string>
    <string name="charaudio">إستمع</string>
    <string name="AttrChar">الشخصيات</string>
    <string name="back_to_home">الرجوع الي الموقع</string>
    <string name="ss_author">ابن الجوزى</string>
    <string name="charlib">المكتبة المرئية للصحابة</string>
    <string name="attlib">المكتبة المرئية للصفات</string>
    <string name="serieName">اسم السلسلة</string>
    <string name="videoName">اسم الفيديو</string>
    <string name="instructorName">اسم الشيخ</string>
    <string name="char_place">استخراج الاماكن</string>
    <string name="char_aboobida">أبو عبيدة بن الجراح</string>
    <string name="char_ali">علي بن أبى طالب</string>
    <string name="char_abobakr">أبو بكر الصديق</string>
    <string name="char_omar">عمر بن الخطاب</string>
    <string name="char_saad">سعد بن أبى وقاص</string>
    <string name="char_osman">عثمان بن عفان</string>
    <string name="char_said">سعيد بن زيد</string>
    <string name="char_talha">طلحه بن عبيد الله</string>
    <string name="char_sbair">الزبير بن العوام</string>
    <string name="char_abdrahman">عبدالرحمن بن عوف</string>
    <string name="sedk">صفة الصدق</string>
    <string name="place_extract">الأماكن</string>
    <string name="attribute_library">مكتبة الصفات</string>
    <string name="char_library">مكتبة الصحابة</string>
</resources>