<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home">

    <WebView
        android:id="@+id/web"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/place_extract"
            android:layout_width="135dp"
            android:layout_height="50dp"
            android:background="@drawable/left_radiud"
            android:text="@string/place_extract"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:background="@color/gray" />

        <Button
            android:id="@+id/char_attr"
            android:layout_width="135dp"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:text="@string/charattribute"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:background="@color/gray" />

        <Button
            android:id="@+id/listen"
            android:layout_width="85dp"
            android:layout_height="50dp"
            android:background="@drawable/right_radius"
            android:text="@string/charaudio"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold" />


    </LinearLayout>

</RelativeLayout>




