<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    app:cardCornerRadius="20dp">


    <androidx.cardview.widget.CardView
        android:id="@+id/c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/serie_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="6dp"
                android:padding="3dp"
                android:text="@string/serieName"
                android:textColor="@color/brown"
                android:textSize="18sp"
                android:textStyle="bold" />


            <FrameLayout
                android:id="@+id/f"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@+id/serie_name"
                android:layout_margin="4dp">

                <VideoView
                    android:id="@+id/video_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/gray"/>
            </FrameLayout>

            <TextView
                android:id="@+id/videoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/f"
                android:layout_alignParentEnd="true"
                android:layout_margin="6dp"
                android:padding="3dp"
                android:text="@string/videoName"
                android:textColor="@color/brown"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/instructorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/videoName"
                android:layout_alignParentEnd="true"
                android:layout_margin="6dp"
                android:padding="3dp"
                android:text="@string/instructorName"
                android:textColor="@color/brown"
                android:textSize="16sp"
                android:textStyle="normal" />



        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>