<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".library.BookDetailActvity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/view_lib" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/white" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/lib_card"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/book_img"
                        android:layout_width="250dp"
                        android:layout_height="200dp"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:id="@+id/book_author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:background="@color/colorPrimaryDark"
                        android:padding="6dp"
                        android:text="@string/ss_author"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/book_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lib_card"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/book_ss"
                android:textColor="@color/brown"
                android:textSize="18sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/back_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/book_name"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/book_disc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textColor="@color/brown"
                    android:text="@string/book_des_ss"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@+id/back_card" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="10dp">

        <TextView
            android:id="@+id/back_lib"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:text="@string/back_to_home"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center"
            android:background = "@color/colorPrimary"/>


    </androidx.cardview.widget.CardView>

</RelativeLayout>